# Admyre

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/artifact/: maven.rs  model.rs
api/src/layout/: maven.rs  model.rs
api/src/maven/: index.liquid  metadata.rs  mod.rs
api/src/repository/: maven.rs  mod.rs  model.rs
api/src/xml/: maven.rs
db/: Cargo.toml
doc/: structures.md
server/: Cargo.toml
server/src/: main.rs
server/src/middleware/: logger.rs
