[package]
name = "admyre"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.15", features = ["multipart", "ws", "tracing", "headers", "macros"] }
liquid = "0.26.1"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
