[package]
name = "admyre-db"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
sea-orm = { version = "0.11.2", features = ["runtime-tokio", "sqlx-all", "macros", "mock", "sqlx", "runtime-tokio-rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
