[package]
name = "admyre-server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.15", features = ["macros", "ws", "headers", "multipart"] }
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["serde", "json", "regex"] }
