[package]
name = "admyre-server"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.15", features = ["macros", "ws", "headers", "multipart", "tracing"] }
log = { version = "0.4.17", features = ["serde", "std"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["serde", "json", "regex"] }
admyre = { path = "../api" }
pretty_env_logger = "0.4.0"
chrono = "0.4.24"
